# Check-Git-Repo-Status

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
check_repo_status/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_git_detection.py  test_integration.py  test_remote_detection.py
