[project]
name = "check-git-repo-status"
version = "0.1.0"
description = "Check git repositories for GitHub remotes and unpushed changes"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
check-repo-status = "check_repo_status.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["check_repo_status"]
