[project]
name = "check-git-repo-status"
version = "0.1.0"
description = "Check git repositories for GitHub remotes and unpushed changes"
authors = [
    {name = "Lucas Rezende", email = "lucas.c.rezende@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/lc-rezende/Check-Git-Repo-Status"
keywords = ["git", "github", "repository", "status", "unpushed", "commits"]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
check-repo-status = "check_repo_status.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["check_repo_status"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
